Canvas drawImage() API does not throw an exception when the image is in broken state https://bugs.webkit.org/show_bug.cgi?id=274575 rdar://128588063

Reviewed by Kimmo Kinnunen.

If the image source is HTMLOrSVGImageElement and the image in a broken state,
canvas drawImage() should throw an exception.

Canvas image sources specifications:
https://html.spec.whatwg.org/multipage/canvas.html#image-sources-for-2d-rendering-contexts

* LayoutTests/imported/w3c/web-platform-tests/html/canvas/element/drawing-images-to-the-canvas/2d.drawImage.nonexistent-expected.txt:
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.h: